Pico-Kassius-Leonardo-Wagner-etapa3/src/y.output
   0  $accept : code $end

   1  code : declaracoes acoes
   2       | acoes

   3  declaracoes : declaracao ';'
   4              | declaracoes declaracao ';'

   5  declaracao : listadeclaracao ':' tipo

   6  listadeclaracao : IDF
   7                  | IDF ',' listadeclaracao

   8  tipo : tipounico
   9       | tipolista

  10  tipounico : INT
  11            | DOUBLE
  12            | FLOAT
  13            | CHAR

  14  tipolista : INT '[' listadupla ']'
  15            | DOUBLE '[' listadupla ']'
  16            | FLOAT '[' listadupla ']'
  17            | CHAR '[' listadupla ']'

  18  listadupla : INT_LIT ':' INT_LIT
  19             | INT_LIT ':' INT_LIT ',' listadupla

  20  acoes : comando ';'
  21        | comando ';' acoes

  22  comando : lvalue '=' expr
  23          | enunciado

  24  lvalue : IDF
  25         | IDF '[' listaexpr ']'

  26  listaexpr : expr
  27            | expr ',' listaexpr

  28  expr : expr '+' expr
  29       | expr '-' expr
  30       | expr '*' expr
  31       | expr '/' expr
  32       | '(' expr ')'
  33       | INT_LIT
  34       | F_LIT
  35       | lvalue
  36       | chamaproc

  37  chamaproc : IDF '(' listaexpr ')'

  38  enunciado : expr
  39            | IF '(' expbool ')' THEN acoes fiminstcontrole
  40            | WHILE '(' expbool ')' '{' acoes '}'

  41  fiminstcontrole : END
  42                  | ELSE acoes END

  43  expbool : TRUE
  44          | FALSE
  45          | '(' expbool ')'
  46          | expbool AND expbool
  47          | expbool OR expbool
  48          | NOT expbool
  49          | expr '>' expr
  50          | expr '<' expr
  51          | expr LE expr
  52          | expr GE expr
  53          | expr EQ expr
  54          | expr NE expr

state 0
	$accept : . code $end  (0)

	IDF  shift 1
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	code  goto 7
	expr  goto 8
	declaracoes  goto 9
	acoes  goto 10
	declaracao  goto 11
	listadeclaracao  goto 12
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 1
	listadeclaracao : IDF .  (6)
	listadeclaracao : IDF . ',' listadeclaracao  (7)
	lvalue : IDF .  (24)
	lvalue : IDF . '[' listaexpr ']'  (25)
	chamaproc : IDF . '(' listaexpr ')'  (37)

	','  shift 17
	'['  shift 18
	'('  shift 19
	'='  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24
	';'  reduce 24
	':'  reduce 6


state 2
	enunciado : IF . '(' expbool ')' THEN acoes fiminstcontrole  (39)

	'('  shift 20
	.  error


state 3
	enunciado : WHILE . '(' expbool ')' '{' acoes '}'  (40)

	'('  shift 21
	.  error


state 4
	expr : INT_LIT .  (33)

	.  reduce 33


state 5
	expr : F_LIT .  (34)

	.  reduce 34


state 6
	expr : '(' . expr ')'  (32)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 23
	lvalue  goto 24
	chamaproc  goto 16


state 7
	$accept : code . $end  (0)

	$end  accept


state 8
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	enunciado : expr .  (38)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	';'  reduce 38


state 9
	code : declaracoes . acoes  (1)
	declaracoes : declaracoes . declaracao ';'  (4)

	IDF  shift 1
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 8
	acoes  goto 29
	declaracao  goto 30
	listadeclaracao  goto 12
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 10
	code : acoes .  (2)

	.  reduce 2


state 11
	declaracoes : declaracao . ';'  (3)

	';'  shift 31
	.  error


state 12
	declaracao : listadeclaracao . ':' tipo  (5)

	':'  shift 32
	.  error


state 13
	acoes : comando . ';'  (20)
	acoes : comando . ';' acoes  (21)

	';'  shift 33
	.  error


state 14
	comando : lvalue . '=' expr  (22)
	expr : lvalue .  (35)

	'='  shift 34
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	';'  reduce 35


state 15
	comando : enunciado .  (23)

	.  reduce 23


state 16
	expr : chamaproc .  (36)

	.  reduce 36


state 17
	listadeclaracao : IDF ',' . listadeclaracao  (7)

	IDF  shift 35
	.  error

	listadeclaracao  goto 36


state 18
	lvalue : IDF '[' . listaexpr ']'  (25)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 37
	lvalue  goto 24
	listaexpr  goto 38
	chamaproc  goto 16


state 19
	chamaproc : IDF '(' . listaexpr ')'  (37)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 37
	lvalue  goto 24
	listaexpr  goto 39
	chamaproc  goto 16


state 20
	enunciado : IF '(' . expbool ')' THEN acoes fiminstcontrole  (39)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 44
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 45


state 21
	enunciado : WHILE '(' . expbool ')' '{' acoes '}'  (40)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 44
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 46


state 22
	lvalue : IDF .  (24)
	lvalue : IDF . '[' listaexpr ']'  (25)
	chamaproc : IDF . '(' listaexpr ')'  (37)

	'['  shift 18
	'('  shift 19
	LE  reduce 24
	GE  reduce 24
	EQ  reduce 24
	NE  reduce 24
	AND  reduce 24
	OR  reduce 24
	'='  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24
	';'  reduce 24
	','  reduce 24
	']'  reduce 24
	')'  reduce 24
	'>'  reduce 24
	'<'  reduce 24


state 23
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expr : '(' expr . ')'  (32)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	')'  shift 47
	.  error


state 24
	expr : lvalue .  (35)

	.  reduce 35


state 25
	expr : expr '+' . expr  (28)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 48
	lvalue  goto 24
	chamaproc  goto 16


state 26
	expr : expr '-' . expr  (29)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 49
	lvalue  goto 24
	chamaproc  goto 16


state 27
	expr : expr '*' . expr  (30)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 50
	lvalue  goto 24
	chamaproc  goto 16


state 28
	expr : expr '/' . expr  (31)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 51
	lvalue  goto 24
	chamaproc  goto 16


state 29
	code : declaracoes acoes .  (1)

	.  reduce 1


state 30
	declaracoes : declaracoes declaracao . ';'  (4)

	';'  shift 52
	.  error


state 31
	declaracoes : declaracao ';' .  (3)

	.  reduce 3


state 32
	declaracao : listadeclaracao ':' . tipo  (5)

	INT  shift 53
	DOUBLE  shift 54
	FLOAT  shift 55
	CHAR  shift 56
	.  error

	tipo  goto 57
	tipounico  goto 58
	tipolista  goto 59


state 33
	acoes : comando ';' .  (20)
	acoes : comando ';' . acoes  (21)

	IDF  shift 22
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	$end  reduce 20
	ELSE  reduce 20
	END  reduce 20
	'}'  reduce 20

	expr  goto 8
	acoes  goto 60
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 34
	comando : lvalue '=' . expr  (22)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 61
	lvalue  goto 24
	chamaproc  goto 16


state 35
	listadeclaracao : IDF .  (6)
	listadeclaracao : IDF . ',' listadeclaracao  (7)

	','  shift 17
	':'  reduce 6


state 36
	listadeclaracao : IDF ',' listadeclaracao .  (7)

	.  reduce 7


state 37
	listaexpr : expr .  (26)
	listaexpr : expr . ',' listaexpr  (27)
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	','  shift 62
	']'  reduce 26
	')'  reduce 26


state 38
	lvalue : IDF '[' listaexpr . ']'  (25)

	']'  shift 63
	.  error


state 39
	chamaproc : IDF '(' listaexpr . ')'  (37)

	')'  shift 64
	.  error


state 40
	expbool : NOT . expbool  (48)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 44
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 65


state 41
	expbool : TRUE .  (43)

	.  reduce 43


state 42
	expbool : FALSE .  (44)

	.  reduce 44


state 43
	expr : '(' . expr ')'  (32)
	expbool : '(' . expbool ')'  (45)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 66
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 67


state 44
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr . '>' expr  (49)
	expbool : expr . '<' expr  (50)
	expbool : expr . LE expr  (51)
	expbool : expr . GE expr  (52)
	expbool : expr . EQ expr  (53)
	expbool : expr . NE expr  (54)

	LE  shift 68
	GE  shift 69
	EQ  shift 70
	NE  shift 71
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	'>'  shift 72
	'<'  shift 73
	.  error


state 45
	enunciado : IF '(' expbool . ')' THEN acoes fiminstcontrole  (39)
	expbool : expbool . AND expbool  (46)
	expbool : expbool . OR expbool  (47)

	AND  shift 74
	OR  shift 75
	')'  shift 76
	.  error


state 46
	enunciado : WHILE '(' expbool . ')' '{' acoes '}'  (40)
	expbool : expbool . AND expbool  (46)
	expbool : expbool . OR expbool  (47)

	AND  shift 74
	OR  shift 75
	')'  shift 77
	.  error


state 47
	expr : '(' expr ')' .  (32)

	.  reduce 32


state 48
	expr : expr . '+' expr  (28)
	expr : expr '+' expr .  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)

	'*'  shift 27
	'/'  shift 28
	LE  reduce 28
	GE  reduce 28
	EQ  reduce 28
	NE  reduce 28
	AND  reduce 28
	OR  reduce 28
	'+'  reduce 28
	'-'  reduce 28
	';'  reduce 28
	','  reduce 28
	']'  reduce 28
	')'  reduce 28
	'>'  reduce 28
	'<'  reduce 28


state 49
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr '-' expr .  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)

	'*'  shift 27
	'/'  shift 28
	LE  reduce 29
	GE  reduce 29
	EQ  reduce 29
	NE  reduce 29
	AND  reduce 29
	OR  reduce 29
	'+'  reduce 29
	'-'  reduce 29
	';'  reduce 29
	','  reduce 29
	']'  reduce 29
	')'  reduce 29
	'>'  reduce 29
	'<'  reduce 29


state 50
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr '*' expr .  (30)
	expr : expr . '/' expr  (31)

	.  reduce 30


state 51
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expr : expr '/' expr .  (31)

	.  reduce 31


state 52
	declaracoes : declaracoes declaracao ';' .  (4)

	.  reduce 4


state 53
	tipounico : INT .  (10)
	tipolista : INT . '[' listadupla ']'  (14)

	'['  shift 78
	';'  reduce 10


state 54
	tipounico : DOUBLE .  (11)
	tipolista : DOUBLE . '[' listadupla ']'  (15)

	'['  shift 79
	';'  reduce 11


state 55
	tipounico : FLOAT .  (12)
	tipolista : FLOAT . '[' listadupla ']'  (16)

	'['  shift 80
	';'  reduce 12


state 56
	tipounico : CHAR .  (13)
	tipolista : CHAR . '[' listadupla ']'  (17)

	'['  shift 81
	';'  reduce 13


state 57
	declaracao : listadeclaracao ':' tipo .  (5)

	.  reduce 5


state 58
	tipo : tipounico .  (8)

	.  reduce 8


state 59
	tipo : tipolista .  (9)

	.  reduce 9


state 60
	acoes : comando ';' acoes .  (21)

	.  reduce 21


state 61
	comando : lvalue '=' expr .  (22)
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	';'  reduce 22


state 62
	listaexpr : expr ',' . listaexpr  (27)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 37
	lvalue  goto 24
	listaexpr  goto 82
	chamaproc  goto 16


state 63
	lvalue : IDF '[' listaexpr ']' .  (25)

	.  reduce 25


state 64
	chamaproc : IDF '(' listaexpr ')' .  (37)

	.  reduce 37


state 65
	expbool : expbool . AND expbool  (46)
	expbool : expbool . OR expbool  (47)
	expbool : NOT expbool .  (48)

	.  reduce 48


state 66
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expr : '(' expr . ')'  (32)
	expbool : expr . '>' expr  (49)
	expbool : expr . '<' expr  (50)
	expbool : expr . LE expr  (51)
	expbool : expr . GE expr  (52)
	expbool : expr . EQ expr  (53)
	expbool : expr . NE expr  (54)

	LE  shift 68
	GE  shift 69
	EQ  shift 70
	NE  shift 71
	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	')'  shift 47
	'>'  shift 72
	'<'  shift 73
	.  error


state 67
	expbool : '(' expbool . ')'  (45)
	expbool : expbool . AND expbool  (46)
	expbool : expbool . OR expbool  (47)

	AND  shift 74
	OR  shift 75
	')'  shift 83
	.  error


state 68
	expbool : expr LE . expr  (51)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 84
	lvalue  goto 24
	chamaproc  goto 16


state 69
	expbool : expr GE . expr  (52)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 85
	lvalue  goto 24
	chamaproc  goto 16


state 70
	expbool : expr EQ . expr  (53)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 86
	lvalue  goto 24
	chamaproc  goto 16


state 71
	expbool : expr NE . expr  (54)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 87
	lvalue  goto 24
	chamaproc  goto 16


state 72
	expbool : expr '>' . expr  (49)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 88
	lvalue  goto 24
	chamaproc  goto 16


state 73
	expbool : expr '<' . expr  (50)

	IDF  shift 22
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 89
	lvalue  goto 24
	chamaproc  goto 16


state 74
	expbool : expbool AND . expbool  (46)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 44
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 90


state 75
	expbool : expbool OR . expbool  (47)

	IDF  shift 22
	NOT  shift 40
	INT_LIT  shift 4
	F_LIT  shift 5
	TRUE  shift 41
	FALSE  shift 42
	'('  shift 43
	.  error

	expr  goto 44
	lvalue  goto 24
	chamaproc  goto 16
	expbool  goto 91


state 76
	enunciado : IF '(' expbool ')' . THEN acoes fiminstcontrole  (39)

	THEN  shift 92
	.  error


state 77
	enunciado : WHILE '(' expbool ')' . '{' acoes '}'  (40)

	'{'  shift 93
	.  error


state 78
	tipolista : INT '[' . listadupla ']'  (14)

	INT_LIT  shift 94
	.  error

	listadupla  goto 95


state 79
	tipolista : DOUBLE '[' . listadupla ']'  (15)

	INT_LIT  shift 94
	.  error

	listadupla  goto 96


state 80
	tipolista : FLOAT '[' . listadupla ']'  (16)

	INT_LIT  shift 94
	.  error

	listadupla  goto 97


state 81
	tipolista : CHAR '[' . listadupla ']'  (17)

	INT_LIT  shift 94
	.  error

	listadupla  goto 98


state 82
	listaexpr : expr ',' listaexpr .  (27)

	.  reduce 27


state 83
	expbool : '(' expbool ')' .  (45)

	.  reduce 45


state 84
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr LE expr .  (51)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 51
	OR  reduce 51
	')'  reduce 51


state 85
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr GE expr .  (52)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 52
	OR  reduce 52
	')'  reduce 52


state 86
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr EQ expr .  (53)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 53
	OR  reduce 53
	')'  reduce 53


state 87
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr NE expr .  (54)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 54
	OR  reduce 54
	')'  reduce 54


state 88
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr '>' expr .  (49)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 49
	OR  reduce 49
	')'  reduce 49


state 89
	expr : expr . '+' expr  (28)
	expr : expr . '-' expr  (29)
	expr : expr . '*' expr  (30)
	expr : expr . '/' expr  (31)
	expbool : expr '<' expr .  (50)

	'+'  shift 25
	'-'  shift 26
	'*'  shift 27
	'/'  shift 28
	AND  reduce 50
	OR  reduce 50
	')'  reduce 50


state 90
	expbool : expbool . AND expbool  (46)
	expbool : expbool AND expbool .  (46)
	expbool : expbool . OR expbool  (47)

	.  reduce 46


state 91
	expbool : expbool . AND expbool  (46)
	expbool : expbool . OR expbool  (47)
	expbool : expbool OR expbool .  (47)

	.  reduce 47


state 92
	enunciado : IF '(' expbool ')' THEN . acoes fiminstcontrole  (39)

	IDF  shift 22
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 8
	acoes  goto 99
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 93
	enunciado : WHILE '(' expbool ')' '{' . acoes '}'  (40)

	IDF  shift 22
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 8
	acoes  goto 100
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 94
	listadupla : INT_LIT . ':' INT_LIT  (18)
	listadupla : INT_LIT . ':' INT_LIT ',' listadupla  (19)

	':'  shift 101
	.  error


state 95
	tipolista : INT '[' listadupla . ']'  (14)

	']'  shift 102
	.  error


state 96
	tipolista : DOUBLE '[' listadupla . ']'  (15)

	']'  shift 103
	.  error


state 97
	tipolista : FLOAT '[' listadupla . ']'  (16)

	']'  shift 104
	.  error


state 98
	tipolista : CHAR '[' listadupla . ']'  (17)

	']'  shift 105
	.  error


state 99
	enunciado : IF '(' expbool ')' THEN acoes . fiminstcontrole  (39)

	ELSE  shift 106
	END  shift 107
	.  error

	fiminstcontrole  goto 108


state 100
	enunciado : WHILE '(' expbool ')' '{' acoes . '}'  (40)

	'}'  shift 109
	.  error


state 101
	listadupla : INT_LIT ':' . INT_LIT  (18)
	listadupla : INT_LIT ':' . INT_LIT ',' listadupla  (19)

	INT_LIT  shift 110
	.  error


state 102
	tipolista : INT '[' listadupla ']' .  (14)

	.  reduce 14


state 103
	tipolista : DOUBLE '[' listadupla ']' .  (15)

	.  reduce 15


state 104
	tipolista : FLOAT '[' listadupla ']' .  (16)

	.  reduce 16


state 105
	tipolista : CHAR '[' listadupla ']' .  (17)

	.  reduce 17


state 106
	fiminstcontrole : ELSE . acoes END  (42)

	IDF  shift 22
	IF  shift 2
	WHILE  shift 3
	INT_LIT  shift 4
	F_LIT  shift 5
	'('  shift 6
	.  error

	expr  goto 8
	acoes  goto 111
	comando  goto 13
	lvalue  goto 14
	enunciado  goto 15
	chamaproc  goto 16


state 107
	fiminstcontrole : END .  (41)

	.  reduce 41


state 108
	enunciado : IF '(' expbool ')' THEN acoes fiminstcontrole .  (39)

	.  reduce 39


state 109
	enunciado : WHILE '(' expbool ')' '{' acoes '}' .  (40)

	.  reduce 40


state 110
	listadupla : INT_LIT ':' INT_LIT .  (18)
	listadupla : INT_LIT ':' INT_LIT . ',' listadupla  (19)

	','  shift 112
	']'  reduce 18


state 111
	fiminstcontrole : ELSE acoes . END  (42)

	END  shift 113
	.  error


state 112
	listadupla : INT_LIT ':' INT_LIT ',' . listadupla  (19)

	INT_LIT  shift 94
	.  error

	listadupla  goto 114


state 113
	fiminstcontrole : ELSE acoes END .  (42)

	.  reduce 42


state 114
	listadupla : INT_LIT ':' INT_LIT ',' listadupla .  (19)

	.  reduce 19


45 terminals, 18 nonterminals
55 grammar rules, 115 states
